# ai-code-review-framework

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
framework/: measurement_framework.md
paper/: part1_paper.md
pilot/: README.md  pyproject.toml
pilot/fixtures/: mock_judge_matches.jsonl  mock_reviews.jsonl  sample.jsonl
pilot/scripts/: fetch_greptile.py  fetch_martian.py
pilot/src/pilot/: __init__.py  api_adapters.py  autoresearch.py  classify.py  data.py  dimension_pipeline.py  judge.py  matching.py  metrics.py  panel.py  prompts.py  reporting.py  reviewer.py  run.py  schemas.py
pilot/src/pilot/datasets/: ccrab.py  greptile.py  martian.py  swe_care.py  swe_prbench.py  truncation.py
pilot/tests/: test_api_adapters.py  test_autoresearch.py  test_ccrab.py  test_data.py  test_family_exclusion_bug.py  test_metrics.py  test_overfit_bug.py  test_panel.py  test_pipeline.py  test_precision_bug.py  test_schemas.py  test_truncation_bug.py
research/: literature_review.md
